--- a/new/네트워크의 역사.md
+++ b/new/네트워크의 역사.md
@@ -1,8 +1,7 @@
 ### 네트워크의 역사
 
 > **[WARRING]**    
-> 이전 세대의 내용을 다룸.    
-> 이 글에서 마지막에 다룬 내용이 지금 현실의 동작이 아닐 수 있음.
+> 이 글은 주로 과거 기술 발전 과정을 다루므로, 현실의 동작을 반영하지 않을 수 있음.
 
 ### 1. **초기 네트워크 연구와 ARPAnet의 탄생 (1960년대)**
 
@@ -23,7 +22,7 @@
 #### **TCP/IP의 개발**
 - 배경: 네트워크 수가 증가함에 따라 상호연결 네트워크(네트워크를 연결하는 포괄 구조)의 필요성이 대두됨.
 - **1970년 초:** TCP 프로토콜 개발 시작, 기존 ARPAnet 프로토콜을 대체.
-    - 초기의 TCP는 현재와 기능의 차이가 있다. 현재 TCP와 IP의 기능이 합쳐진 형태이다.
+    - 당시에는 TCP와 IP가 통합된 형태였으며, 나중에 분리되었다.
 - **1970년 후반:** TCP와 IP로 분리. UDP 프로토콜 개발.
 
 ### 3. **TCP/IP 확산과 네트워크의 발전 (1980년대)**
@@ -49,7 +48,7 @@
 ##### [추가] LAN 위주의 프로토콜
 
 LAN 환경에서 사용되기 위한 (TCP/IP가 아닌) 다른 Protocol Suite도 있었으나, WAN 영역에서 통합적으로 사용되지 못했다.    
-이후 TCP/IP가 전 세계적으로 표준화되면서 사라짐.
+이후 TCP/IP 기반의 프로토콜이 전 세계적으로 표준화되면서 사라짐. 
 
 - AppleTalk: 애플이 설계한 프로토콜로, 소규모 네트워크 내의 장치 간 통신을 위해 사용.
 - IPX/SPX: 노벨(NetWare) 운영체제에서 널리 사용된 프로토콜로, LAN 환경에 최적화.
