--- a/new/네트워크의 역사.md
+++ b/new/네트워크의 역사.md
@@ -15,7 +15,7 @@
 - **1970년대 초**: ARPAnet과 별개의 패킷 교환 네트워크들의 탄생
 
 #### **ARPAnet의 성장**
-  - ARPAnet이 15개 노드로 확장.
+  - ARPAnet이 15개 노드로 확장. (1972년)
   - NCP(Network-Control Protocol)라는 호스트 간 서로 통신하기 위한 (host-to-host) 프로토콜 완성 [RFC 001].
   - 레이 톰린슨이 최초 전자메일 프로그램 개발. [Ray Tomlinson 1971]
 
@@ -30,7 +30,7 @@
 #### **TCP/IP 표준화와 ARPAnet의 전환**
 - **1981년:** TCP/IP 표준 발표.
 - **1983년:** TCP/IP가 ARPAnet의 공식 프로토콜로 채택.
-    - (추가 정보: NCP에서 TCP/IP로의 전환[RFC 801]은 플래그 데이(flag day) 형태의 사건이었다. 실제 전환은 점진적으로 이루어졌으며, 83년 1월 1일인 플래그 데이는 전환 기간의 끝을 정의했다고 볼 수 있다.)
+    - (추가 정보: NCP에서 TCP/IP로의 전환[RFC 801]은 플래그 데이(flag day) 형태의 사건이었다. 실제 전환은 점진적으로 이루어졌으며, 83년 1월 1일인 플래그 데이는 전환 기간의 끝을 정의했다고 볼 수 있다. 어떤 식으로 이루어졌는지는 자료를 찾지 못함.)
 - **1980년 후반:** TCP/IP의 확장
     - 도메인 네임 시스템(domain name system, DNS)의 개발 [RFC 1034]
     - TCP의 혼잡 제어 도입. [Jacobson 1988]
@@ -45,7 +45,7 @@
   - **1990년:** ARPAnet 종료, NSFNET이 대체.
 - **ANSNET (1991년):** 고속 상업용 네트워크로, 인터넷 백본 역할을 수행. IBM, Merit, MCI가 제공.
 
-##### [추가] LAN 위주의 프로토콜
+##### [추가] 밀려난 LAN 위주의 프로토콜
 
 LAN 환경에서 사용되기 위한 (TCP/IP가 아닌) 다른 Protocol Suite도 있었으나, WAN 영역에서 통합적으로 사용되지 못했다.    
 이후 TCP/IP 기반의 프로토콜이 전 세계적으로 표준화되면서 사라짐. 
@@ -96,3 +96,4 @@ LAN 환경에서 사용되기 위한 (TCP/IP가 아닌) 다른 Protocol Suite도
     - https://ko.wikipedia.org/wiki/%EC%9D%B8%ED%84%B0%EB%84%B7%EC%9D%98_%EC%97%AD%EC%82%AC
     - https://www.computerhistory.org/internethistory/ 
     - https://nordvpn.com/ko/blog/history-of-internet-explained/
+    - https://ko.wikipedia.org/wiki/%EC%9D%B8%ED%84%B0%EB%84%B7_%EA%B1%B0%EB%B2%84%EB%84%8C%EC%8A%A4
