--- a/main/네트워크 모델은 중요하지 않다.md
+++ b/main/네트워크 모델은 중요하지 않다.md
@@ -3,7 +3,7 @@
 - 네트워크 모델에 대한 이해
 - 네트워크 동작 전반에 대한 기본 지식
 
-# 요약
+# 결론
 
 - 실제 네트워크를 구성하는 건 프로토콜들이다.
 - 프로토콜들은 네트워크 모델의 특정한 계층에 속한다. 이를 통해 계층 식 구현과 관리 효율성을 높인다.
@@ -35,5 +35,5 @@
 # References
 
 - https://youtu.be/k1gyh9BlOT8?si=1KU9BC7QyZMYnvN7 
-- https://arc.net/l/quote/dycgmhlf << 해커뉴스 일부분 하이라이트
+- https://arc.net/l/quote/dycgmhlf << 해커뉴스 일부분 하이라이트 - 그냥 인상깊어서 가져옴. 딱히 참고한건 아님.
 - https://youtu.be/Oyit5eo4UsY?si=dfG_WQ7I6-oFYn31 << OSI 7계층, TCP/IP 4계층은 사실 아무것도 해 주지 않는다
